# s3gui

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: api.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  s3_client.rs  sync.rs
styles/: main.css
