[package]
name = "s3gui"
version = "0.1.0"
description = "S3 GUI - Object Storage Manager"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "s3gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-types = "1"
thiserror = "1"
anyhow = "1"
dirs = "5"
notify = "6"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
base64 = "0.22"
